--- a/main.css
+++ b/main.css
@@ -2,12 +2,14 @@ body {
     background-color: #f8f8f8;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
+  
   header {
     display: inline-block;
     width: 800px;
-    margin-left: calc((100% - 800px) / 2);
+    margin-left: calc(50% - 400px);
     margin-bottom: 30px;
   }
+
   header > img {
     float: left;
     height: 50px;
@@ -15,7 +17,9 @@ body {
   
   nav {
     float: right;
-    margin-top: 7px;
+    margin-top: 10px;
+    line-height: 20px;
+    margin-top: 15px;
   }
   
   a {
@@ -30,6 +34,7 @@ body {
     border: 5px solid transparent;
     border-radius: 18px;
   }
+
   a:last-child {
     border-color: #9e9e9e;
     text-transform: uppercase;
@@ -39,24 +44,29 @@ body {
   main {
     display: inline-block;
     width: 800px;
-    margin-left: calc((100% - 800px) / 2);
+    margin-left: calc(50% - 400px);
   }
+
   div {
     width: 45%;
     float: left;
     margin-top: 30px;
   }
+
   h1 {
     margin: 0;
     font-size: 100px;
     color: #9e9e9e;
   }
+
   p {
     margin: 0;
     font-size: 32px;
     color: #b6b6b6;
   }
+
   main > img {
     width: 50%;
     float: right;
   }
+}
